fix(style): 调整环形进度条的z-index以优化层叠效果

--- a/packages/player-rgb/style.css
+++ b/packages/player-rgb/style.css
@@ -114,7 +114,7 @@ body::before {
     hsl(360 100% 50%) var(--r),
     transparent var(--r)
   );
-  z-index: -1;
+  z-index: -2;
 }
 
 .duration {
